thông tin sách bán chạy

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
           <div class="book-sale">
             <!-- item 1 best sell -->
             <div class="book-item">
-              <a href="#!">
+              <a href="./Thong_tin/Top sale/Book1.html">
                 <img
                   src="./Assets/img/Top sell/2.1.jpg"
                   alt="Lân tinh"
@@ -374,7 +374,7 @@
 
             <!-- item 2 best sell -->
             <div class="book-item">
-              <a href="#!">
+              <a href="/Thong_tin/Top sale/Book2.html">
                 <img
                   src="./Assets/img/Top sell/2.2.jpg"
                   alt="Chén thánh của Eris- Tập 4"
@@ -403,7 +403,7 @@
 
             <!-- item 3 best sell -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Top sale/Book3.html"
                 ><img
                   src="./Assets/img/Top sell/2.3.jpg"
                   alt="Búp sen xanh"
@@ -428,7 +428,7 @@
             </div>
             <!-- item 4 best sell -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Top sale/Book4.html"
                 ><img
                   src="./Assets/img/Top sell/2.4.jpg"
                   alt="Dưới bầu trời xa cách"
@@ -453,7 +453,7 @@
             </div>
             <!-- item 5 best sell -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Top sale/Book5.html"
                 ><img
                   src="./Assets/img/Top sell/2.5.jpg"
                   alt="Doanh nhân thế giới - Newton"
@@ -481,7 +481,7 @@
 
             <!-- item 6 best sell -->
             <div class="book-item">
-              <a href="#!"
+              <a href="/Thong_tin/Top sale/Book6.html"
                 ><img
                   src="./Assets/img/Top sell/2.6.jpg"
                   alt=" Nuôi dạy teen giữa thời đại lo âu"
