Thông tin phần combo

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
           <div class="book-sale">
             <!-- item combo 1 -->
             <div class="book-item">
-              <a href="#!">
+              <a href="/Thong_tin/Combo/book1.html">
                 <img
                   src="./Assets/img/COMBO/CB1.jpg"
                   alt="Combo Dragon Ball full color phần một"
@@ -571,7 +571,7 @@
 
             <!-- item combo 2 -->
             <div class="book-item">
-              <a href="#!">
+              <a href="/Thong_tin/Combo/book2.html">
                 <img
                   src="./Assets/img/COMBO/CB2.jpg"
                   alt="Combo Thám tử lừng danh conan"
@@ -600,7 +600,7 @@
 
             <!-- item combo 3 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="/Thong_tin/Combo/book3.html"
                 ><img
                   src="./Assets/img/COMBO/CB3.jpg"
                   alt="Combo Dragon Ball full color - Phần một"
@@ -628,7 +628,7 @@
             </div>
             <!-- item combo 4 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="/Thong_tin/Combo/book4.html"
                 ><img
                   src="./Assets/img/COMBO/CB4.jpg"
                   alt="Combo Cung hoàng đạo Cổ đại ( 3 cuốn)"
@@ -655,7 +655,7 @@
             </div>
             <!-- item combo 5 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="/Thong_tin/Combo/book5.html"
                 ><img
                   src="./Assets/img/COMBO/CB5.jpg"
                   alt="Combo Tục ngữ - Ca dao- Dân ca Việt Nam"
