thông tin manga_comic

--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
           <div class="book-sale">
             <!-- manga comic 1 -->
             <div class="book-item">
-              <a href="#!">
+              <a href="/Thong_tin/Manga-comic/book1.html">
                 <img
                   src="./Assets/img/Maga - comic/MC7.jpg"
                   alt="Dr. STONE"
@@ -769,7 +769,7 @@
 
             <!-- manga comic 2 -->
             <div class="book-item">
-              <a href="#!">
+              <a href="/Thong_tin/Manga-comic/book2.html">
                 <img
                   src="./Assets/img/Maga - comic/MC2.jpg"
                   alt="Em đến cùng mưa"
@@ -796,7 +796,7 @@
 
             <!-- Manga comic 3 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="/Thong_tin/Manga-comic/book3.html"
                 ><img
                   src="./Assets/img/Maga - comic/MC10.jpg"
                   alt="One-Punch Man "
@@ -822,7 +822,7 @@
             </div>
             <!-- item combo 4 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="/Thong_tin/Manga-comic/book4.html"
                 ><img
                   src="./Assets/img/Maga - comic/MC4.jpg"
                   alt="Nhà có năm nàng dâu - Tập 1"
@@ -849,7 +849,7 @@
             </div>
             <!-- item combo 5 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="/Thong_tin/Manga-comic/book5.html"
                 ><img
                   src="./Assets/img/Maga - comic/MC5.jpg"
                   alt="Doraemon - Tuyển tập theo chủ đề"
@@ -877,7 +877,7 @@
 
             <!-- item combo 6 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="/Thong_tin/Manga-comic/book6.html"
                 ><img
                   src="./Assets/img/Maga - comic/MC6.jpg"
                   alt="One-Punch Man - Tập 30 "
