Thong tin Doraemon

--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
           <div class="book-sale">
             <!-- Doraemon 1 -->
             <div class="book-item">
-              <a href="#!">
+              <a href="/Thong_tin/Doraemon/book1.html">
                 <img src="./Assets/img/DORAEMON/D1.jpg" alt="" class="thumb" />
               </a>
               <div class="info">
@@ -960,7 +960,7 @@
 
             <!-- Doraemon 2 -->
             <div class="book-item">
-              <a href="#!">
+              <a href="/Thong_tin/Doraemon/book2.html">
                 <img
                   src="./Assets/img/DORAEMON/D2.jpg"
                   alt="Doraemon Movie Story Màu - Nobita và chuyến thám hiểm Nam Cực Kachi Kochi"
@@ -990,7 +990,7 @@
 
             <!-- doraemon 3 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Doraemon/book3.html"
                 ><img
                   src="./Assets/img/DORAEMON/D3.jpg"
                   alt="Doraemon Movie Story - Tân Nobita và chuyến phiêu lưu vào xứ quỷ - 7 dũng sĩ phép thuật"
@@ -1018,7 +1018,7 @@
             </div>
             <!-- Doraemon 4 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Doraemon/book4.html"
                 ><img
                   src="./Assets/img/DORAEMON/D4.jpg"
                   alt="Doraemon Hoạt hình màu - Nobita và Viện bảo tàng bảo bối"
@@ -1045,7 +1045,7 @@
             </div>
             <!-- Doraemon 5  -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Doraemon/book5.html"
                 ><img
                   src="./Assets/img/DORAEMON/D5.jpg"
                   alt="Doraemon - Tuyển tập theo chủ đề"
@@ -1073,7 +1073,7 @@
 
             <!-- doraemon 6  -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Doraemon/book6.html"
                 ><img
                   src="./Assets/img/DORAEMON/D6.jpg"
                   alt="Doraemon Tranh truyện màu - Nobita Tây du kí - Tập 1"
