thông tin WingsBooks

--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@
           <div class="book-sale">
             <!-- WingsBook 1 -->
             <div class="book-item">
-              <a href="#!">
+              <a href="./Thong_tin/WingsBooks/book1.html">
                 <img
                   src="./Assets/img/WingsBooks/WB1.jpg"
                   alt=" Làm bạn với cô nàng dễ thương nhì lớp - Tập 2"
@@ -1163,7 +1163,7 @@
 
             <!-- WingsBook2 -->
             <div class="book-item">
-              <a href="#!">
+              <a href="./Thong_tin/WingsBooks/book2.html">
                 <img
                   src="./Assets/img/WingsBooks/WB2.jpg"
                   alt="Hôn nhân hạnh phúc của tôi (Manga)"
@@ -1192,7 +1192,7 @@
 
             <!-- WingsBook 3 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/WingsBooks/book3.html"
                 ><img
                   src="./Assets/img/WingsBooks/WB3.jpg"
                   alt=" Cecilia & Lawrence (Manga) - Tập 13"
@@ -1219,7 +1219,7 @@
             </div>
             <!-- WingsBook 4 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/WingsBooks/book4.html"
                 ><img
                   src="./Assets/img/WingsBooks/WB4.jpg"
                   alt="Nhà có cụ mèo già - Tập 2"
@@ -1244,7 +1244,7 @@
             </div>
             <!-- WingsBook 5  -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/WingsBooks/book5.html"
                 ><img
                   src="./Assets/img/WingsBooks/Wb5.jpg"
                   alt=" Arya bàn bên thỉnh thoảng lại trêu ghẹo tôi bằng tiếng Nga - Tập 7"
@@ -1273,7 +1273,7 @@
 
             <!-- WingsBook 6  -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/WingsBooks/book6.html"
                 ><img
                   src="./Assets/img/WingsBooks/Wb6.jpg"
                   alt=" Arya bàn bên thỉnh thoảng lại trêu ghẹo tôi bằng tiếng Nga - Tập 1"
