thông tin combo ưu đãi

--- a/index.html
+++ b/index.html
@@ -1322,7 +1322,7 @@
           <div class="book-sale">
             <!-- UD 1 -->
             <div class="book-item">
-              <a href="#!">
+              <a href="./Thong_tin/Top_UD/book1.html">
                 <img
                   src="./Assets/img/Ưu Đãi/UD1.jpg"
                   alt=" Gosick - Tập 8+9"
@@ -1350,7 +1350,7 @@
 
             <!-- UD 2 -->
             <div class="book-item">
-              <a href="#!">
+              <a href="./Thong_tin/Top_UD/book2.html">
                 <img
                   src="./Assets/img/Ưu Đãi/UD2.jpg"
                   alt="Combo Trăm năm gắn bó, một lời hẹn ước (2 quyển)"
@@ -1379,7 +1379,7 @@
 
             <!-- UD 3 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Top_UD/book3.html"
                 ><img
                   src="./Assets/img/Ưu Đãi/UD3.jpg"
                   alt=" Combo Khẽ chạm vào tự nhiên (4 quyển)"
@@ -1406,7 +1406,7 @@
             </div>
             <!-- UD 4 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Top_UD/book4.html"
                 ><img
                   src="./Assets/img/Ưu Đãi/UD4.jpg"
                   alt=" Combo Say cool to English (4 quyển)"
@@ -1433,7 +1433,7 @@
             </div>
             <!-- UD 5  -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Top_UD/book5.html"
                 ><img
                   src="./Assets/img/Ưu Đãi/UD5.jpg"
                   alt=" Combo Cung hoàng đạo Cổ đại (3 cuốn)"
@@ -1461,7 +1461,7 @@
 
             <!-- UD 6  -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Top_UD/book6.html"
                 ><img
                   src="./Assets/img/Ưu Đãi/UD6.jpg"
                   alt=" Boxset Grimgar - Ảo ảnh và tro tàn - Tập 14 + 14 ++ (2 quyển)"
