thông tin nhập khẩu

--- a/index.html
+++ b/index.html
@@ -1510,7 +1510,7 @@
           <div class="book-sale">
             <!-- NK 1 -->
             <div class="book-item">
-              <a href="#!">
+              <a href="./Thong_tin/Nhap_khau/book1.html">
                 <img
                   src="./Assets/img/Nhap Khau/NK1.jpg"
                   alt="  DT Conan Kaito Kid #2"
@@ -1538,7 +1538,7 @@
 
             <!-- NK 2 -->
             <div class="book-item">
-              <a href="#!">
+              <a href="./Thong_tin/Nhap_khau/book2.html">
                 <img
                   src="./Assets/img/Nhap Khau/NK2.jpg"
                   alt="DT Conan Kaito Kid #1"
@@ -1565,7 +1565,7 @@
 
             <!-- NK 3 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Nhap_khau/book3.html"
                 ><img
                   src="./Assets/img/Nhap Khau/NK3.jpg"
                   alt=" DT Conan - Heiji Hattori #2"
@@ -1592,7 +1592,7 @@
             </div>
             <!-- NK 4 -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Nhap_khau/book4.html"
                 ><img
                   src="./Assets/img/Nhap Khau/NK4.jpg"
                   alt=" DT Conan - Black Organization #1"
@@ -1619,7 +1619,7 @@
             </div>
             <!-- UD 5  -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Nhap_khau/book5.html"
                 ><img
                   src="./Assets/img/Nhap Khau/NK5.jpg"
                   alt=" DT Conan - Heiji Hattori #2"
@@ -1647,7 +1647,7 @@
 
             <!-- UD 6  -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Nhap_khau/book6.html"
                 ><img
                   src="./Assets/img/Nhap Khau/NK6.jpg"
                   alt="DT Conan - Heiji Hattori #1"
