--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 >
               </li>
               <li>
-                <a href="#!"
+                <a href="./Dang_ky/index.html"
                   ><img src="./Assets/icon/Dang-ky.jpg" alt="" class="DK" />Đăng
                   ký</a
                 >
