Sửa phần đk, đn

--- a/Dang_ky/index.html
+++ b/Dang_ky/index.html
@@ -45,7 +45,8 @@
           <input type="Password" name="Password" required />
           <label for="">Nhập lại mật khẩu</label>
         </div>
-        <input type="submit" value="Đăng ký" id="btn-login" />
+
+        <button class="btn-login">Đăng ký</button>
       </form>
     </div>
   </body>
