--- a/Dang_nhap/index.html
+++ b/Dang_nhap/index.html
@@ -30,7 +30,7 @@
           <input type="Password" name="Password" required />
           <label for="">Mật khẩu</label>
         </div>
-        <input type="submit" value="Đăng nhập" id="btn-login" />
+        <button class="btn-login">Đăng ký</button>
       </form>
     </div>
   </body>
