--- a/Dang_ky/index.html
+++ b/Dang_ky/index.html
@@ -47,6 +47,10 @@
         </div>
 
         <button class="btn-login">Đăng ký</button>
+
+        <p>
+          Bạn đã có tài khoảng? <a href="/Dang_nhap/index.html">Đăng nhập</a>
+        </p>
       </form>
     </div>
   </body>
