--- a/Dang_nhap/index.html
+++ b/Dang_nhap/index.html
@@ -31,6 +31,7 @@
           <label for="">Mật khẩu</label>
         </div>
         <button class="btn-login">Đăng ký</button>
+        <p>Bạn chưa có tài khoảng? <a href="/Dang_ky/index.html">Đăng ký</a></p>
       </form>
     </div>
   </body>
